Unify indentation and trim trailing spaces